--- a/doc/language standard/makefile
+++ b/doc/language standard/makefile
@@ -1,9 +1,28 @@
-#This makefile requires latexmk
+##################################
+# Standard of the eks language
+# Copyright (C) 2015  Florian Evaldsson <florian.evaldsson@telia.com>
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program; if not, write to the Free Software Foundation, Inc.,
+# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+##################################
+
+#this makefile can be done better.
 
 NAME := doc
 PDFTOOL := evince
+
 #enable xelatex
-#remember to remove inputenc
 XELATEX:=-e '$$pdflatex=q/xelatex %O -interaction=nonstopmode -halt-on-error %S/'
 
 
