HUGE update, sorry about that! support for new features such as internal parsers or #parent[parent:internal], added few more tests, inproved performance, improved documentation (a bit)

--- a/src/makefile
+++ b/src/makefile
@@ -22,13 +22,19 @@ VERSION = 0.1
 CC = gcc
 
 ###################################
-#	C-FLAGS
+#	C FLAGS
 #	LD FLAGS
 ###################################
 
+ifdef DEBUG
+DEBUG_OPTIONS = -DEKS_SHOW_DEBUG
+else
+DEBUG_OPTIONS =
+endif
+
 CFLAGS = -c -fPIC -std=c99 
 CFLAGS += -g -Wall
-CFLAGS += -DCC_COMPILING_EKS
+CFLAGS += -DCC_COMPILING_EKS $(DEBUG_OPTIONS)
 CFLAGS += $(shell pkg-config --cflags glib-2.0)
 
 LDFLAGS = -lm
